--- a/atf/src/main/res/layout/view_alert.xml
+++ b/atf/src/main/res/layout/view_alert.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:textSize="16sp"
-        android:textColor="@color/colorGrayLight"
+        android:textColor="@color/colorGray"
         android:textAlignment="center"
         android:layout_gravity="center"
         android:gravity="center"
